# skeleton

./: README.md  gitman.yml  pyproject.toml
samples/conf/: odoo16.conf
