[project]
name = ""
version = ""
description = ""
authors = [
    {name = "eci", email = "code@evenhouseconsulting.com"},
]
dependencies = [
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
